--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="uk">
 
 <head>
+	
     <meta charset="utf-8">
     <title>Unlocker</title>
-	<script charset="UTF-8" src="//cdn.sendpulse.com/js/push/fb69af3dfa46feeb8b0ddcbd151bcd80_1.js></script>
+	<script charset="UTF-8" src="//cdn.sendpulse.com/js/push/fb69af3dfa46feeb8b0ddcbd151bcd80_1.js" async></script>
 </head>
 
 <body>
